# FPV-Drone-IITK-Thesis

./: README.md
Hardware/additional_ros2_nodes/: README.md  camera_testing_node.py  detection_node_test.py  mavlink_takeoff_node.py  square1.py  square2_height_stabilization.py
Hardware/ros2_final_ws/: README.md
Hardware/ros2_final_ws/src/ardupilot_dds_tests/: mav.parm  mav.tlog  mav.tlog.raw  setup.py
Hardware/ros2_final_ws/src/ardupilot_dds_tests/ardupilot_dds_tests/: ardu_master_node.py  detection_node.py
Hardware/ros2_final_ws/src/ardupilot_dds_tests/launch/: master.launch.py
Hardware/ros2_final_ws/src/ardupilot_msgs/: package.xml
Hardware/ros2_final_ws/src/my_copter_interfaces/: CMakeLists.txt  package.xml
Hardware/ros2_final_ws/src/my_copter_interfaces/action/: Move.action
ImageProcessing/: DPT_Model_Experimentation.ipynb  HaarCascade_and_GroPro.ipynb  PatternChecker.ipynb  README.md  YOLO_DeepSort_Tracking.ipynb  YOLO_Experiments.ipynb
Simulation/: README.md
Simulation/Ardupilot/: README.md
Simulation/Ardupilot/ros2_ws/src/ardupilot_dds_tests/: README.md  mav.parm  setup.py
Simulation/Ardupilot/ros2_ws/src/thesis_nodes/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
Simulation/PX4/: README.md
Simulation/PX4/gazebo_components/: README.md  sitl_multiple_run_edited.sh
Simulation/PX4/gazebo_components/custom_box/: model.config  model.sdf
Simulation/PX4/gazebo_components/iris_custom/: iris_custom.sdf  iris_custom.sdf.jinja
Simulation/PX4/gazebo_components/iris_rplidar_custom/: iris.sdf.last_generated  iris_rplidar_custom.sdf  iris_rplidar_custom.sdf.jinja  model.config
Simulation/PX4/gazebo_components/lidar_updated/: model.sdf
Simulation/PX4/gazebo_components/rplidar_custom/: model.config  model.sdf
Simulation/PX4/ros2_ws/src/controller/: README.md  package.xml  setup.py
Simulation/PX4/ros2_ws/src/drone_flight/: README.md  package.xml  setup.cfg  setup.py
Simulation/PX4/ros2_ws/src/sample_code_package/: README.md  package.xml  (+2 more)
(+26 files in other folders)
